Document the behaviour explicitly