@@ -1,5 +1,58 @@
 # Java Buildpack Memory Calculator
 
+The Java buildpack memory calculator determines values for JVM memory options with the goal of enabling
+an application to perform well while not exceeding the total memory available in a container
+(which results in the application being killed).
+
+The buildpack provides the following inputs to the memory calculator:
+* the total memory available to the application,
+* an estimate of the number of threads that will be used by the application,
+* an estimate of the number of classes that will be loaded,
+* the type of JVM pool used in the calculation ('permgen' for Java 7 and 'metaspace' for Java 8 and later),
+* any JVM options specified by the user.
+
+The memory calculator prints the JVM memory option settings described below, _excluding_ any the user has specified,
+which are assumed to be correct.
+
+For Java 8 and later, the memory calculator sets the maximum metaspace size (`-XX:MaxMetaspaceSize`)
+and compressed class space size (`-XX:CompressedClassSpaceSize`) based on the number of classes that will be
+loaded and sets the reserved code cache size (`-XX:ReservedCodeCacheSize`) to 240 Mb.
+
+For Java 7, it sets the maximum permanent generation size (`-XX:MaxPermSize`) based on the
+number of classes that will be loaded and sets the reserved code cache size (`-XX:ReservedCodeCacheSize`)
+to 48 Mb.
+
+It sets the maximum direct memory size (`-XX:MaxDirectMemorySize`) to 10 Mb.
+
+It sets the stack size (`-Xss`) to a default value (unless the user has specified the stack size) and then
+calculates the amount of memory that will be consumed by the application's thread stacks.
+
+Finally, it sets the heap size (`-Xmx`) to total memory minus the above values.
+
+If the values need to be adjusted, the user can either increase the total memory available
+or set one or more JVM memory options to suitable values. Unless the user specifies the heap size (`-Xmx`),
+increasing the total memory available results in the heap size setting increasing by the additional total memory.
+Similarly, changing the value of other options affects the heap size. For example, if the user increases the
+maximum direct memory size from its default value of 10 Mb to 20 Mb, then this will reduce the calculated heap
+size by 10 Mb.
+
+If the estimated number of threads or loaded classes needs to be modified, this can be achieved by configuring
+the buildpack. For example, when the OpenJDK JRE is used, the number of threads can be modified as in
+the following example:
+
+```bash
+$ cf set-env my-application JBP_CONFIG_OPEN_JDK_JRE '{ memory_calculator: { stack_threads: 200 } }'
+```
+
+and the number of loaded classes can be modified as in the following example:
+```bash
+$ cf set-env my-application JBP_CONFIG_OPEN_JDK_JRE '{ memory_calculator: { class_count: 1000 } }'
+```
+
+Please consult the [Java Buildpack][] documentation for up to date configuration information.
+
+The document [Java Buildpack Memory Calculator v3][] provides some rationale for the memory calculator externals.
+
 ### Getting started
 
 [Install Go][] and then `get` the memory calculator (in the Go source tree).
@@ -58,16 +111,13 @@ will use the Go compiler with the `GOOS` environment variable to generate the ex
 This will not work if the Go installation doesn't support all these platforms, so you may have to
 ensure Go is installed with cross-compiler support.
 
-### Design
-
-The document [Java Buildpack Memory Calculator v3](https://docs.google.com/document/d/1vlXBiwRIjwiVcbvUGYMrxx2Aw1RVAtxq3iuZ3UK2vXA/edit?usp=sharing)
-provides some rationale for the memory calculator externals.
-
 ## License
 
 The Java Buildpack Memory Calculator is Open Source software released under the
 [Apache 2.0 license][].
 
+[Java Buildpack] https://github.com/cloudfoundry/java-buildpack
+[Java Buildpack Memory Calculator v3] https://docs.google.com/document/d/1vlXBiwRIjwiVcbvUGYMrxx2Aw1RVAtxq3iuZ3UK2vXA/edit?usp=sharing
 [Install Go]: http://golang.org/doc/install
 [Godep]: http://github.com/tools/godep
 [Ginkgo/Gomega]: http://github.com/onsi/ginkgo
